tests/ui/feature-gates/feature-gate-negative_bounds.stderr
error: negative bounds are not supported
  --> $DIR/feature-gate-negative_bounds.rs:1:12
   |
LL | fn test<T: !Copy>() {}
   |            ^

error: aborting due to previous error

