tests/ui/feature-gates/feature-gate-negative_bounds.rs
fn test<T: !Copy>() {}
//~^ ERROR negative bounds are not supported

fn main() {}
